// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings renders H1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:960px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 48px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.31666666666666665em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.37916666666666665em + 1px);
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.31666666666666665em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.37916666666666665em + 1px);
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.31666666666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.37916666666666665em;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

@media screen and (min-width:960px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 48px;
    line-height: 1.25;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.275em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3375em;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.31666666666666665em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.37916666666666665em + 1px);
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 28px;
    line-height: 1.2857142857142858;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2928571428571429em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3553571428571429em;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.31666666666666665em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.37916666666666665em + 1px);
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width:959px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.31666666666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.37916666666666665em;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2f75d7;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-0:visited:not(:disabled) {
  color: #903d91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;
